wip: added functions for creating and editing
